--- a/app/src/main/res/layout/my_profile_fragment.xml
+++ b/app/src/main/res/layout/my_profile_fragment.xml
@@ -40,7 +40,7 @@
                 android:background="@drawable/circle"
                 android:focusable="true"
                 android:foreground="@drawable/profile_photo_circle"
-                app:imageUrl='@{viewModel.photoUri}'
+                app:circleImageUrl='@{viewModel.profile.photoUri}'
                 app:layout_constraintBottom_toBottomOf="@+id/ivTopImage"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +56,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:gravity="center"
-                android:text='@{viewModel.name}'
+                android:text='@{viewModel.profile == null ? "" : (String.format("%s%s", viewModel.profile.name == null ? "" : viewModel.profile.name, viewModel.profile.surname == null ? "" : " " + viewModel.profile.surname))}'
                 android:textColor="@color/colorBlack"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -86,7 +86,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="0dp"
                 android:layout_marginEnd="@dimen/profile_end_margin"
-                android:text="@{viewModel.dateOfBirth}"
+                android:text="@{viewModel.profile.dateOfBirth}"
                 android:textColor="@color/colorBlack"
                 android:textSize="@dimen/profile_text_size"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -115,7 +115,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="0dp"
                 android:layout_marginEnd="@dimen/profile_end_margin"
-                android:text="@{viewModel.driverLicense}"
+                android:text="@{viewModel.profile.driverLicense}"
                 android:textColor="@color/colorBlack"
                 android:textSize="@dimen/profile_text_size"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -145,7 +145,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="0dp"
                 android:layout_marginEnd="@dimen/profile_end_margin"
-                android:text="@{viewModel.stateOfIssue}"
+                android:text="@{viewModel.profile.stateOfIssue}"
                 android:textColor="@color/colorBlack"
                 android:textSize="@dimen/profile_text_size"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -196,18 +196,16 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@android:color/transparent"
-                        android:clickable="@{viewModel.emailOnEdit}"
-                        android:cursorVisible="@{viewModel.emailOnEdit}"
                         android:ellipsize="middle"
-                        android:focusable="@{viewModel.emailOnEdit}"
-                        android:focusableInTouchMode="@{viewModel.emailOnEdit}"
                         android:gravity="start|bottom"
                         android:imeOptions="actionDone"
                         android:inputType="textEmailAddress"
                         android:paddingBottom="2dp"
                         android:selectAllOnFocus="true"
                         android:singleLine="true"
-                        android:textSize="@dimen/profile_text_size" />
+                        android:text='@={viewModel.emailAddr}'
+                        android:textSize="@dimen/profile_text_size"
+                        app:requestFocus="@{viewModel.emailOnEdit}" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <ImageButton
@@ -219,8 +217,9 @@
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="@dimen/profile_end_margin"
                     android:background="@android:color/transparent"
-                    android:onClick='@{viewModel::onClickedEditEmail}'
-                    android:src='@{viewModel.emailOnEdit ? @drawable/ic_check_36dp : @drawable/ic_edit_36dp }' />
+                    android:src='@{viewModel.emailOnEdit ? @drawable/ic_check_36dp : @drawable/ic_edit_36dp }'
+                    app:onClick='@{viewModel::onClickedEditEmail}'
+                    tools:src="@drawable/ic_edit_36dp" />
 
                 <ImageView
                     android:id="@+id/ivPhonePicture"
@@ -251,18 +250,16 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@android:color/transparent"
-                        android:clickable="@{viewModel.phoneOnEdit}"
-                        android:cursorVisible="@{viewModel.phoneOnEdit}"
                         android:ellipsize="middle"
-                        android:focusable="@{viewModel.phoneOnEdit}"
-                        android:focusableInTouchMode="@{viewModel.phoneOnEdit}"
                         android:gravity="start|bottom"
                         android:imeOptions="actionDone"
                         android:inputType="phone"
                         android:paddingBottom="2dp"
                         android:selectAllOnFocus="true"
                         android:singleLine="true"
-                        android:textSize="@dimen/profile_text_size" />
+                        android:text='@={viewModel.phoneNumber}'
+                        android:textSize="@dimen/profile_text_size"
+                        app:requestFocus="@{viewModel.phoneOnEdit}" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <ImageButton
@@ -274,8 +271,9 @@
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="@dimen/profile_end_margin"
                     android:background="@android:color/transparent"
-                    android:onClick='@{viewModel::onClickedPhoneEdit}'
-                    android:src='@{viewModel.phoneOnEdit ? @drawable/ic_check_36dp : @drawable/ic_edit_36dp }' />
+                    android:src='@{viewModel.phoneOnEdit ? @drawable/ic_check_36dp : @drawable/ic_edit_36dp }'
+                    app:onClick='@{viewModel::onClickedPhoneEdit}'
+                    tools:src="@drawable/ic_edit_36dp" />
 
             </RelativeLayout>
 
@@ -294,7 +292,8 @@
                 android:layout_marginTop="8dp"
                 android:text="@string/credit_card_details"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/bCardAddEdit" />
+                app:layout_constraintTop_toTopOf="@+id/bCardAddEdit"
+                app:visibleOrGone='@{viewModel.cardNumber == null}' />
 
 
             <TextView
@@ -306,7 +305,8 @@
                 android:layout_marginTop="12dp"
                 android:text="@string/you_currently_have_no_credit_card"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/lCardDetails" />
+                app:layout_constraintTop_toBottomOf="@+id/lCardDetails"
+                app:visibleOrGone='@{viewModel.cardNumber == null}' />
 
             <RelativeLayout
                 android:id="@+id/rlCardInfo"
@@ -314,9 +314,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/profile_start_margin"
                 android:layout_marginTop="12dp"
-                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/separator02">
+                app:layout_constraintTop_toBottomOf="@+id/separator02"
+                app:visibleOrGone='@{viewModel.cardNumber != null}'>
 
                 <ImageView
                     android:id="@+id/myImageView"
@@ -334,6 +334,7 @@
                     android:layout_alignBottom="@+id/myImageView"
                     android:layout_marginBottom="25dp"
                     android:gravity="bottom|center"
+                    android:text='@{String.format("**** **** **** *%s", viewModel.cardNumber)}'
                     android:textColor="@color/colorBlack"
                     android:textSize="@dimen/profile_text_size"
                     tools:text="**** **** **** *111" />
@@ -346,8 +347,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="48dp"
                 android:layout_marginEnd="32dp"
-                android:onClick='@{viewModel::onClickedAddCard}'
                 android:text="@string/add"
+                app:onClick='@{viewModel::onClickedAddCard}'
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/separator02" />
 
