--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#FF9933</color>
     <color name="colorPrimaryDark">#FF9933</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorBackgroundPrimary">#FFFFFF</color>
 
 
     <color name="colorText">#000000</color>
