--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="nav_header_vertical_spacing">8dp</dimen>
+    <dimen name="nav_header_height">176dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+
     <dimen name="button_text_size">18dp</dimen>
 
     <!-- Profile -->
@@ -9,5 +16,7 @@
     <dimen name="profile_top_margin">20dp</dimen>
     <dimen name="profile_label_text_size">11sp</dimen>
     <dimen name="profile_text_size">14sp</dimen>
+
+
 
 </resources>
