--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -30,10 +30,36 @@
         <item name="android:background">@color/black_overlay</item>
     </style>
 
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+
+    <style name="MainActionBar" parent="Widget.AppCompat.Light.ActionBar">
+        <item name="background">@android:color/transparent</item>
+        <item name="titleTextColor">@color/colorBackgroundPrimary</item>
+    </style>
+
+    <style name="HintStyle" parent="TextAppearance.Design.Hint">
+        <item name="android:textSize">11sp</item>
+    </style>
+
     <style name="LabelStyle">
         <item name="android:textColor">@color/colorLabelText</item>
         <item name="android:textSize">@dimen/profile_label_text_size</item>
         <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="HeaderText">
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/colorBlack</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="ButtonStyle" parent="Widget.AppCompat.Button.Colored">
@@ -47,12 +73,13 @@
         <item name="android:textSize">@dimen/button_text_size</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:paddingTop">15dp</item>
-        <item name="android:paddingStart">43dp</item> //38
-        <item name="android:paddingEnd">43dp</item> //38
+        <item name="android:paddingStart">43dp</item>
+        //38
+        <item name="android:paddingEnd">43dp</item>
+        //38
         <item name="android:paddingBottom">25dp</item>
     </style>
 
-    <style name="HintStyle" parent="TextAppearance.Design.Hint">
-        <item name="android:textSize">11sp</item>
-    </style>
+
+
 </resources>
