--- a/app/src/main/res/layout/my_profile_fragment.xml
+++ b/app/src/main/res/layout/my_profile_fragment.xml
@@ -202,7 +202,7 @@
                         android:singleLine="true"
                         android:text='@={viewModel.emailAddr}'
                         android:textSize="@dimen/profile_text_size"
-                        app:requestFocus="@{viewModel.emailOnEdit}" />
+                        app:requestFocus="@{safeUnbox(viewModel.emailOnEdit)}" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <ImageButton
@@ -214,7 +214,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="@dimen/profile_end_margin"
                     android:background="@android:color/transparent"
-                    android:src='@{viewModel.emailOnEdit ? @drawable/ic_check_36dp : @drawable/ic_edit_36dp }'
+                    android:src='@{safeUnbox(viewModel.emailOnEdit) ? @drawable/ic_check_36dp : @drawable/ic_edit_36dp }'
                     app:onClick='@{viewModel::editEmail}'
                     tools:src="@drawable/ic_edit_36dp" />
 
@@ -256,7 +256,7 @@
                         android:singleLine="true"
                         android:text='@={viewModel.phoneNumber}'
                         android:textSize="@dimen/profile_text_size"
-                        app:requestFocus="@{viewModel.phoneOnEdit}" />
+                        app:requestFocus="@{safeUnbox(viewModel.phoneOnEdit)}" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <ImageButton
@@ -268,7 +268,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="@dimen/profile_end_margin"
                     android:background="@android:color/transparent"
-                    android:src='@{viewModel.phoneOnEdit ? @drawable/ic_check_36dp : @drawable/ic_edit_36dp }'
+                    android:src='@{safeUnbox(viewModel.phoneOnEdit) ? @drawable/ic_check_36dp : @drawable/ic_edit_36dp }'
                     app:onClick='@{viewModel::editPhone}'
                     tools:src="@drawable/ic_edit_36dp" />
 
