--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="profile"
-            type="androidx.lifecycle.MutableLiveData&lt;com.example.testjetpack.models.Profile&gt;" />
+            type="androidx.lifecycle.LiveData&lt;com.example.testjetpack.models.Profile&gt;" />
 
         <variable
             name="picasso"
