--- a/app/src/main/res/layout/fragment_notification_list.xml
+++ b/app/src/main/res/layout/fragment_notification_list.xml
@@ -26,9 +26,7 @@
             android:name="com.example.testjetpack.ui.main.notifications.NotificationFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:bindingAdapter='@{viewModel.adapter}'
-            app:bindingAdapterClickListener='@{viewModel.onItemClickListener}'
-            app:bindingItemViewModels='@{viewModel.itemViewModels}'
+            android:adapter='@{viewModel.adapter}'
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:context=".ui.main.notifications.NotificationFragment"
             tools:listitem="@layout/item_notification" />
