--- a/app/src/main/res/layout/fragment_notification_list.xml
+++ b/app/src/main/res/layout/fragment_notification_list.xml
@@ -14,7 +14,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:context=".ui.main.notifications.NotificationFragment">
 
         <ImageView
             android:layout_width="match_parent"
@@ -28,7 +29,6 @@
             android:layout_height="match_parent"
             android:adapter='@{viewModel.adapter}'
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:context=".ui.main.notifications.NotificationFragment"
             tools:listitem="@layout/item_notification" />
     </LinearLayout>
 </layout>
