updated network state item to bindable

--- a/app/src/main/res/layout/item_gitreposearch.xml
+++ b/app/src/main/res/layout/item_gitreposearch.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.testjetpack.ui.main.gitreposearch.GitRepoSearchItemViewModel" />
+            type="com.example.testjetpack.ui.main.gitreposearch.GitRepoSearchItemVM" />
 
     </data>
 
