--- a/app/src/main/res/layout/item_network_state.xml
+++ b/app/src/main/res/layout/item_network_state.xml
@@ -1,25 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp">
-    <TextView
-        android:id="@+id/error_msg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"/>
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        style="?android:attr/progressBarStyle"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+
+        <import type="com.example.testjetpack.models.git.network.Status" />
+
+        <variable
+            name="viewModel"
+            type="com.example.testjetpack.ui.main.gitreposearch.NetworkStateItemVM" />
+
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
-    <Button
-        android:id="@+id/retry_button"
-        style="@style/ButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/retryWithThreeDots"/>
-</LinearLayout>
+        android:orientation="vertical"
+        android:padding="8dp">
+
+        <TextView
+            android:id="@+id/error_msg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text='@{viewModel.networkState.msg}'
+            app:visibleOrGone='@{viewModel.networkState.msg != null}'/>
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:visibleOrGone='@{viewModel.networkState.status == Status.RUNNING}' />
+
+        <Button
+            android:id="@+id/retry_button"
+            style="@style/ButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/retryWithThreeDots"
+            android:onClick='@{(v) -> viewModel.retryCallback.invoke()}'
+            app:visibleOrGone='@{viewModel.networkState.status == Status.FAILED}' />
+
+    </LinearLayout>
+</layout>
