--- a/app/src/main/res/layout/item_network_state.xml
+++ b/app/src/main/res/layout/item_network_state.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.testjetpack.ui.main.gitreposearch.NetworkStateItemVM" />
+            type="com.example.testjetpack.ui.custom.NetworkStateItemVM" />
 
     </data>
 
