--- a/app/src/main/res/layout/fragment_gitreposearch.xml
+++ b/app/src/main/res/layout/fragment_gitreposearch.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="com.example.testjetpack.models.git.network.NetworkState" />
+
         <variable
             name="viewModel"
             type="com.example.testjetpack.ui.main.gitreposearch.GitRepoSearchFragmentVM" />
@@ -26,7 +28,7 @@
             android:id="@+id/etTextToSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@id/list"
+            android:layout_above="@id/srlRefresh"
             android:layout_alignParentStart="true"
             android:layout_marginBottom="@dimen/min_text_margin"
             android:layout_toStartOf="@+id/bSearch"
@@ -43,17 +45,27 @@
             android:onClick='@{viewModel::searchRepos}'
             android:text="@string/search" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/list"
-            android:name="com.example.testjetpack.ui.main.gitreposearch.GitRepoSearchFragment"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/srlRefresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/bSearch"
-            android:adapter='@{viewModel.adapter}'
-            app:items='@{viewModel.repos}'
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:networkState='@{viewModel.networkState}'
-            tools:listitem="@layout/item_gitreposearch" />
+            app:onRefreshListener='@{() -> viewModel.refresh()}'
+            app:refreshing='@{viewModel.refreshState == NetworkState.LOADING}'>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:adapter='@{viewModel.adapter}'
+                android:scrollbars="vertical"
+                app:items='@{viewModel.repos}'
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:networkState='@{viewModel.networkState}'
+                app:position='@{safeUnbox(viewModel.scrollToPosition)}'
+                tools:listitem="@layout/item_gitreposearch" />
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </RelativeLayout>
 
 </layout>
