--- a/app/src/main/res/layout/fragment_gitreposearch.xml
+++ b/app/src/main/res/layout/fragment_gitreposearch.xml
@@ -32,8 +32,11 @@
             android:layout_alignParentStart="true"
             android:layout_marginBottom="@dimen/min_text_margin"
             android:layout_toStartOf="@+id/bSearch"
+            android:inputType="text|textNoSuggestions"
+            android:imeOptions="actionDone"
             android:lines="1"
-            android:text='@={viewModel.searchText}' />
+            android:text='@={viewModel.searchText}'
+            app:onEditorActionListener='@{viewModel.onOk}' />
 
         <Button
             android:id="@+id/bSearch"
