--- a/app/src/main/res/layout/item_gitreposearch.xml
+++ b/app/src/main/res/layout/item_gitreposearch.xml
@@ -27,7 +27,7 @@
             android:drawableStart="@drawable/ic_check_36dp"
             android:drawablePadding="@dimen/min_text_margin"
             android:gravity="center_vertical"
-            android:text='@{viewModel.repo.owner.login}'
+            android:text='@{viewModel.repo.ownerName}'
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/min_text_margin"
             android:layout_marginEnd="@dimen/min_text_margin"
-            android:text='@{String.format("%d.", viewModel.repo.indexInResponse)}'
+            android:text='@{String.format("%d.", viewModel.repo.index)}'
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvRepoUrl"
             tools:text="1." />
