updated project struct, DB

--- a/app/src/main/res/layout/fragment_gitreposearch.xml
+++ b/app/src/main/res/layout/fragment_gitreposearch.xml
@@ -5,7 +5,7 @@
 
     <data>
 
-        <import type="com.example.testjetpack.models.git.network.NetworkState" />
+        <import type="com.example.testjetpack.models.NetworkState" />
 
         <variable
             name="viewModel"
