--- a/app/src/main/res/layout/item_network_state.xml
+++ b/app/src/main/res/layout/item_network_state.xml
@@ -4,7 +4,7 @@
 
     <data>
 
-        <import type="com.example.testjetpack.models.git.network.Status" />
+        <import type="com.example.testjetpack.models.Status" />
 
         <variable
             name="viewModel"
