--- a/app/src/main/res/layout/fragment_notification_list.xml
+++ b/app/src/main/res/layout/fragment_notification_list.xml
@@ -28,6 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:adapter='@{viewModel.adapter}'
+            app:items='@{viewModel.adapterItems}'
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/item_notification" />
     </LinearLayout>
