--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,9 +12,9 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="My Profile" />
         <item
-            android:id="@+id/nav_my_history"
+            android:id="@+id/nav_gps"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="My History" />
+            android:title="GPS" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
